<resources>
    <string name="app_name">Inventory</string>

    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Q-ty</string>
    <string name="product_supplier_mail">Supplier mail</string>

    <string name="dollar">$</string>
    <string name="sale">Sale</string>

    <string name="empty_inventory">It\'s a bit empty here</string>
    <string name="get_started">Get started by adding a product</string>

    <string name="inc_quantity">Inc</string>
    <string name="dec_quantity">Dec</string>

    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="order_product">Order Product</string>
    <string name="select_product_image">Select product image</string>

    <string name="product_delete_request">Delete product?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>

    <string name="toast_enter_name">Enter a name please</string>
    <string name="toast_enter_price">Enter a positive price please</string>
    <string name="toast_enter_mail">Enter a valid e-mail please</string>
    <string name="toast_enter_quantity">Enter positive quantity please</string>
    <string name="toast_select_product_image">Select product image please</string>
    <string name="toast_image_file_not_found">Image file not found</string>

    <string name="send_email">Send Email</string>
    <string name="mail_subject">Order %s</string>
    <string name="mail_body" formatted="false">We would like to request the mentioned in the subject product.\nThe last defined price was the $%s and could you please provide the supply asap since only %s pieces left.</string>
</resources>
